6report/5old/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET REC let_and_decls SEMISEMI

   4  let_and_decls : var var EQ expr AND let_and_decls
   5                | var var EQ expr

   6  expr : LET var EQ expr IN expr
   7       | LET REC let_and_decls IN expr
   8       | IF expr THEN expr ELSE expr
   9       | FUN varlist ARROW expr
  10       | arith_expr EQ arith_expr
  11       | arith_expr LT arith_expr
  12       | arith_expr

  13  arith_expr : arith_expr PLUS factor_expr
  14             | arith_expr MINUS factor_expr
  15             | factor_expr

  16  factor_expr : factor_expr TIMES app_expr
  17              | factor_expr DIV app_expr
  18              | app_expr

  19  app_expr : app_expr atomic_list
  20           | atomic_expr

  21  atomic_list : INT atomic_list
  22              | BOOL atomic_list
  23              | ID atomic_list
  24              | LPAR expr RPAR atomic_list
  25              | INT
  26              | BOOL
  27              | ID
  28              | LPAR expr RPAR

  29  atomic_expr : INT
  30              | BOOL
  31              | ID
  32              | LPAR expr RPAR

  33  varlist : ID
  34          | ID varlist

  35  var : ID

  36  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (36)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	toplevel  goto 10
	expr  goto 11
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (29)

	.  reduce 29


state 4
	atomic_expr : BOOL .  (30)

	.  reduce 30


state 5
	atomic_expr : ID .  (31)

	.  reduce 31


state 6
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . REC let_and_decls SEMISEMI  (3)
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC let_and_decls IN expr  (7)

	ID  shift 16
	REC  shift 17
	.  error

	var  goto 18


state 7
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 20
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 8
	atomic_expr : LPAR . expr RPAR  (32)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 21
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 9
	expr : FUN . varlist ARROW expr  (9)

	ID  shift 22
	.  error

	varlist  goto 23


state 10
	%entry% : '\001' toplevel .  (36)

	.  reduce 36


state 11
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 24
	.  error


state 12
	expr : arith_expr . EQ arith_expr  (10)
	expr : arith_expr . LT arith_expr  (11)
	expr : arith_expr .  (12)
	arith_expr : arith_expr . PLUS factor_expr  (13)
	arith_expr : arith_expr . MINUS factor_expr  (14)

	PLUS  shift 25
	MINUS  shift 26
	EQ  shift 27
	LT  shift 28
	IN  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	RPAR  reduce 12
	AND  reduce 12
	SEMISEMI  reduce 12


state 13
	arith_expr : factor_expr .  (15)
	factor_expr : factor_expr . TIMES app_expr  (16)
	factor_expr : factor_expr . DIV app_expr  (17)

	TIMES  shift 29
	DIV  shift 30
	IN  reduce 15
	PLUS  reduce 15
	MINUS  reduce 15
	EQ  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	RPAR  reduce 15
	AND  reduce 15
	SEMISEMI  reduce 15


state 14
	factor_expr : app_expr .  (18)
	app_expr : app_expr . atomic_list  (19)

	INT  shift 31
	BOOL  shift 32
	ID  shift 33
	LPAR  shift 34
	IN  reduce 18
	PLUS  reduce 18
	TIMES  reduce 18
	MINUS  reduce 18
	DIV  reduce 18
	EQ  reduce 18
	LT  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	RPAR  reduce 18
	AND  reduce 18
	SEMISEMI  reduce 18

	atomic_list  goto 35


state 15
	app_expr : atomic_expr .  (20)

	.  reduce 20


state 16
	var : ID .  (35)

	.  reduce 35


state 17
	toplevel : LET REC . let_and_decls SEMISEMI  (3)
	expr : LET REC . let_and_decls IN expr  (7)

	ID  shift 16
	.  error

	var  goto 36
	let_and_decls  goto 37


state 18
	toplevel : LET var . EQ expr SEMISEMI  (2)
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 38
	.  error


state 19
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC let_and_decls IN expr  (7)

	ID  shift 16
	REC  shift 39
	.  error

	var  goto 40


state 20
	expr : IF expr . THEN expr ELSE expr  (8)

	THEN  shift 41
	.  error


state 21
	atomic_expr : LPAR expr . RPAR  (32)

	RPAR  shift 42
	.  error


state 22
	varlist : ID .  (33)
	varlist : ID . varlist  (34)

	ID  shift 22
	ARROW  reduce 33

	varlist  goto 43


state 23
	expr : FUN varlist . ARROW expr  (9)

	ARROW  shift 44
	.  error


state 24
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 25
	arith_expr : arith_expr PLUS . factor_expr  (13)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 45
	app_expr  goto 14
	atomic_expr  goto 15


state 26
	arith_expr : arith_expr MINUS . factor_expr  (14)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	factor_expr  goto 46
	app_expr  goto 14
	atomic_expr  goto 15


state 27
	expr : arith_expr EQ . arith_expr  (10)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 47
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 28
	expr : arith_expr LT . arith_expr  (11)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	arith_expr  goto 48
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 29
	factor_expr : factor_expr TIMES . app_expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 49
	atomic_expr  goto 15


state 30
	factor_expr : factor_expr DIV . app_expr  (17)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	.  error

	app_expr  goto 50
	atomic_expr  goto 15


31: shift/reduce conflict (shift 31, reduce 25) on INT
31: shift/reduce conflict (shift 32, reduce 25) on BOOL
31: shift/reduce conflict (shift 33, reduce 25) on ID
31: shift/reduce conflict (shift 34, reduce 25) on LPAR
state 31
	atomic_list : INT . atomic_list  (21)
	atomic_list : INT .  (25)

	INT  shift 31
	BOOL  shift 32
	ID  shift 33
	LPAR  shift 34
	IN  reduce 25
	PLUS  reduce 25
	TIMES  reduce 25
	MINUS  reduce 25
	DIV  reduce 25
	EQ  reduce 25
	LT  reduce 25
	THEN  reduce 25
	ELSE  reduce 25
	RPAR  reduce 25
	AND  reduce 25
	SEMISEMI  reduce 25

	atomic_list  goto 51


32: shift/reduce conflict (shift 31, reduce 26) on INT
32: shift/reduce conflict (shift 32, reduce 26) on BOOL
32: shift/reduce conflict (shift 33, reduce 26) on ID
32: shift/reduce conflict (shift 34, reduce 26) on LPAR
state 32
	atomic_list : BOOL . atomic_list  (22)
	atomic_list : BOOL .  (26)

	INT  shift 31
	BOOL  shift 32
	ID  shift 33
	LPAR  shift 34
	IN  reduce 26
	PLUS  reduce 26
	TIMES  reduce 26
	MINUS  reduce 26
	DIV  reduce 26
	EQ  reduce 26
	LT  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	RPAR  reduce 26
	AND  reduce 26
	SEMISEMI  reduce 26

	atomic_list  goto 52


33: shift/reduce conflict (shift 31, reduce 27) on INT
33: shift/reduce conflict (shift 32, reduce 27) on BOOL
33: shift/reduce conflict (shift 33, reduce 27) on ID
33: shift/reduce conflict (shift 34, reduce 27) on LPAR
state 33
	atomic_list : ID . atomic_list  (23)
	atomic_list : ID .  (27)

	INT  shift 31
	BOOL  shift 32
	ID  shift 33
	LPAR  shift 34
	IN  reduce 27
	PLUS  reduce 27
	TIMES  reduce 27
	MINUS  reduce 27
	DIV  reduce 27
	EQ  reduce 27
	LT  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	RPAR  reduce 27
	AND  reduce 27
	SEMISEMI  reduce 27

	atomic_list  goto 53


state 34
	atomic_list : LPAR . expr RPAR atomic_list  (24)
	atomic_list : LPAR . expr RPAR  (28)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 54
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 35
	app_expr : app_expr atomic_list .  (19)

	.  reduce 19


state 36
	let_and_decls : var . var EQ expr AND let_and_decls  (4)
	let_and_decls : var . var EQ expr  (5)

	ID  shift 16
	.  error

	var  goto 55


state 37
	toplevel : LET REC let_and_decls . SEMISEMI  (3)
	expr : LET REC let_and_decls . IN expr  (7)

	IN  shift 56
	SEMISEMI  shift 57
	.  error


state 38
	toplevel : LET var EQ . expr SEMISEMI  (2)
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 58
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 39
	expr : LET REC . let_and_decls IN expr  (7)

	ID  shift 16
	.  error

	var  goto 36
	let_and_decls  goto 59


state 40
	expr : LET var . EQ expr IN expr  (6)

	EQ  shift 60
	.  error


state 41
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 61
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 42
	atomic_expr : LPAR expr RPAR .  (32)

	.  reduce 32


state 43
	varlist : ID varlist .  (34)

	.  reduce 34


state 44
	expr : FUN varlist ARROW . expr  (9)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 62
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 45
	arith_expr : arith_expr PLUS factor_expr .  (13)
	factor_expr : factor_expr . TIMES app_expr  (16)
	factor_expr : factor_expr . DIV app_expr  (17)

	TIMES  shift 29
	DIV  shift 30
	IN  reduce 13
	PLUS  reduce 13
	MINUS  reduce 13
	EQ  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	RPAR  reduce 13
	AND  reduce 13
	SEMISEMI  reduce 13


state 46
	arith_expr : arith_expr MINUS factor_expr .  (14)
	factor_expr : factor_expr . TIMES app_expr  (16)
	factor_expr : factor_expr . DIV app_expr  (17)

	TIMES  shift 29
	DIV  shift 30
	IN  reduce 14
	PLUS  reduce 14
	MINUS  reduce 14
	EQ  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	RPAR  reduce 14
	AND  reduce 14
	SEMISEMI  reduce 14


state 47
	expr : arith_expr EQ arith_expr .  (10)
	arith_expr : arith_expr . PLUS factor_expr  (13)
	arith_expr : arith_expr . MINUS factor_expr  (14)

	PLUS  shift 25
	MINUS  shift 26
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	AND  reduce 10
	SEMISEMI  reduce 10


state 48
	expr : arith_expr LT arith_expr .  (11)
	arith_expr : arith_expr . PLUS factor_expr  (13)
	arith_expr : arith_expr . MINUS factor_expr  (14)

	PLUS  shift 25
	MINUS  shift 26
	IN  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	AND  reduce 11
	SEMISEMI  reduce 11


state 49
	factor_expr : factor_expr TIMES app_expr .  (16)
	app_expr : app_expr . atomic_list  (19)

	INT  shift 31
	BOOL  shift 32
	ID  shift 33
	LPAR  shift 34
	IN  reduce 16
	PLUS  reduce 16
	TIMES  reduce 16
	MINUS  reduce 16
	DIV  reduce 16
	EQ  reduce 16
	LT  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	RPAR  reduce 16
	AND  reduce 16
	SEMISEMI  reduce 16

	atomic_list  goto 35


state 50
	factor_expr : factor_expr DIV app_expr .  (17)
	app_expr : app_expr . atomic_list  (19)

	INT  shift 31
	BOOL  shift 32
	ID  shift 33
	LPAR  shift 34
	IN  reduce 17
	PLUS  reduce 17
	TIMES  reduce 17
	MINUS  reduce 17
	DIV  reduce 17
	EQ  reduce 17
	LT  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	AND  reduce 17
	SEMISEMI  reduce 17

	atomic_list  goto 35


state 51
	atomic_list : INT atomic_list .  (21)

	.  reduce 21


state 52
	atomic_list : BOOL atomic_list .  (22)

	.  reduce 22


state 53
	atomic_list : ID atomic_list .  (23)

	.  reduce 23


state 54
	atomic_list : LPAR expr . RPAR atomic_list  (24)
	atomic_list : LPAR expr . RPAR  (28)

	RPAR  shift 63
	.  error


state 55
	let_and_decls : var var . EQ expr AND let_and_decls  (4)
	let_and_decls : var var . EQ expr  (5)

	EQ  shift 64
	.  error


state 56
	expr : LET REC let_and_decls IN . expr  (7)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 65
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 57
	toplevel : LET REC let_and_decls SEMISEMI .  (3)

	.  reduce 3


state 58
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (6)

	IN  shift 66
	SEMISEMI  shift 67
	.  error


state 59
	expr : LET REC let_and_decls . IN expr  (7)

	IN  shift 56
	.  error


state 60
	expr : LET var EQ . expr IN expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 68
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 61
	expr : IF expr THEN expr . ELSE expr  (8)

	ELSE  shift 69
	.  error


state 62
	expr : FUN varlist ARROW expr .  (9)

	.  reduce 9


63: shift/reduce conflict (shift 31, reduce 28) on INT
63: shift/reduce conflict (shift 32, reduce 28) on BOOL
63: shift/reduce conflict (shift 33, reduce 28) on ID
63: shift/reduce conflict (shift 34, reduce 28) on LPAR
state 63
	atomic_list : LPAR expr RPAR . atomic_list  (24)
	atomic_list : LPAR expr RPAR .  (28)

	INT  shift 31
	BOOL  shift 32
	ID  shift 33
	LPAR  shift 34
	IN  reduce 28
	PLUS  reduce 28
	TIMES  reduce 28
	MINUS  reduce 28
	DIV  reduce 28
	EQ  reduce 28
	LT  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	RPAR  reduce 28
	AND  reduce 28
	SEMISEMI  reduce 28

	atomic_list  goto 70


state 64
	let_and_decls : var var EQ . expr AND let_and_decls  (4)
	let_and_decls : var var EQ . expr  (5)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 71
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 65
	expr : LET REC let_and_decls IN expr .  (7)

	.  reduce 7


state 66
	expr : LET var EQ expr IN . expr  (6)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 72
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 67
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 68
	expr : LET var EQ expr . IN expr  (6)

	IN  shift 66
	.  error


state 69
	expr : IF expr THEN expr ELSE . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 19
	IF  shift 7
	LPAR  shift 8
	FUN  shift 9
	.  error

	expr  goto 73
	arith_expr  goto 12
	factor_expr  goto 13
	app_expr  goto 14
	atomic_expr  goto 15


state 70
	atomic_list : LPAR expr RPAR atomic_list .  (24)

	.  reduce 24


state 71
	let_and_decls : var var EQ expr . AND let_and_decls  (4)
	let_and_decls : var var EQ expr .  (5)

	AND  shift 74
	IN  reduce 5
	SEMISEMI  reduce 5


state 72
	expr : LET var EQ expr IN expr .  (6)

	.  reduce 6


state 73
	expr : IF expr THEN expr ELSE expr .  (8)

	.  reduce 8


state 74
	let_and_decls : var var EQ expr AND . let_and_decls  (4)

	ID  shift 16
	.  error

	var  goto 36
	let_and_decls  goto 75


state 75
	let_and_decls : var var EQ expr AND let_and_decls .  (4)

	.  reduce 4


State 31 contains 4 shift/reduce conflicts.
State 32 contains 4 shift/reduce conflicts.
State 33 contains 4 shift/reduce conflicts.
State 63 contains 4 shift/reduce conflicts.


24 terminals, 12 nonterminals
37 grammar rules, 76 states
